Fixes excessive whitespace on heading elements with align right class

--- a/style.css
+++ b/style.css
@@ -158,3 +158,6 @@ img{
     max-width: none;
 }
 
+div.align-right>h2, h3 {
+    text-align: end;
+}
